# parsidion-cc

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE-VAULT.md  CLAUDE.md  CONTRIBUTING.md  ENHANCE.md  GEMINI.md  Makefile  README.md  SECURITY.md  hackernews-release.md  install.py  project-explorer-slideshow.html  pyproject.toml  research-agent-slideshow.html  vault-architecture-slideshow.html  vault-deduplicator-slideshow.html  vault-explorer-slideshow.html
.github/workflows/: ci.yml
.superpowers/brainstorm/62088-1774139751/: .server-info  full-design-v2.html
.superpowers/brainstorm/67193-1774327177/: .server-stopped  diff-placement.html  history-view-mockup.html
.superpowers/brainstorm/86816-1773985923/: design-layout.html  overview.html
agents/: project-explorer.md  research-agent.md  research-documentation-agent.md  vault-deduplicator.md  vault-explorer.md
docs/: AGENTCHROME.md  ARCHITECTURE.md  DOCUMENTATION_STYLE_GUIDE.md  EMBEDDINGS.md  EMBEDDINGS_EVAL.md  MCP.md  MCPL.md  README.md  VAULT_SYNC.md  VISUALIZER.md  reddit-release.md
docs/archive/: ENHANCE-completed-2026-03-24.md
docs/superpowers/plans/: 2026-03-13-vault-explorer-agent.md  2026-03-14-subagent-stop-hook.md  2026-03-16-parsidion-mcp.md  2026-03-21-visualizer-redesign.md  2026-03-23-git-diff-viewer.md  2026-03-24-multi-vault-support.md  2026-04-27-codex-cli-ai-backend.md  2026-04-27-codex-runtime-hooks-installer.md  2026-04-27-summarizer-cli-backend.md
docs/superpowers/specs/: 2026-03-13-vault-explorer-agent-design.md  2026-03-16-parsidion-mcp-design.md  2026-03-21-visualizer-redesign.md  2026-03-23-git-diff-viewer-design.md  2026-03-24-multi-vault-support-design.md  2026-03-25-graph-features-design.md  2026-04-16-pi-anthropic-config-status-design.md  2026-04-26-parsidion-rebrand-design.md  2026-04-27-codex-cli-ai-backend-design.md  2026-04-27-summarizer-cli-backend-design.md
extensions/pi/parsidion-vault/: parsidion-vault.md  parsidion-vault.ts
parsidion-mcp/: Makefile  pyproject.toml
parsidion-mcp/src/parsidion_mcp/: __init__.py  server.py
parsidion-mcp/src/parsidion_mcp/tools/: __init__.py  notes.py  ops.py  search.py
parsidion-mcp/tests/: test_context.py  test_notes.py  test_ops.py  test_search.py  test_server.py
scripts/: build_graph.py  html-to-md  install-pi-extension  show-context
skills/claude-vault/: SKILL.md
skills/claude-vault/scripts/: build_embeddings.py  check_graph_coverage.py  embed_eval.py  pre_compact_hook.py  run_trigger_eval.bat  run_trigger_eval.py  run_trigger_eval.sh  session_start_hook.py  session_stop_hook.py  session_stop_wrapper.sh  summarize_sessions.py  update_index.py  vault_common.py  vault_doctor.py  vault_search.py
skills/claude-vault/templates/: config.yaml  daily.md  debugging.md  framework.md  project.md  research.md
skills/parsidion/: SKILL.md
skills/parsidion-cc/: SKILL.md
skills/parsidion-cc/scripts/: build_embeddings.py  build_graph.py  embed_eval.py  embed_eval_generate.py  embed_eval_report.py  embed_eval_run.py  html-to-md.py  migrate_memory.py  migrate_research.py  post_compact_hook.py  pre_compact_hook.py  run_trigger_eval.py  run_trigger_eval.sh  session_start_hook.py  session_stop_hook.py  subagent_stop_hook.py  summarize_sessions.py  update_index.py  vault_common.py  vault_config.py  vault_doctor.py  vault_export.py  vault_fs.py  vault_hooks.py  vault_links.py  vault_merge.py  vault_new.py  vault_path.py  vault_review.py  vault_search.py  vault_stats.py  vault_tui.py
skills/parsidion-cc/templates/: config.yaml  daily.md  language.md
skills/parsidion/scripts/: ai_backend.py  build_embeddings.py  build_graph.py  check_graph_coverage.py  codex_session_start_hook.py  codex_stop_hook.py  embed_eval.py  embed_eval_common.py  embed_eval_report.py  migrate_memory.py  post_compact_hook.py  pre_compact_hook.py  run_trigger_eval.bat  run_trigger_eval.py  run_trigger_eval.sh  session_start_hook.py  session_stop_hook.py  session_stop_wrapper.sh  subagent_stop_hook.py  summarize_sessions.py  update_index.py  vault_adaptive.py  vault_common.py  vault_config.py  vault_doctor.py  vault_hooks.py  vault_index.py  vault_links.py  vault_merge.py  vault_new.py  vault_path.py  vault_review.py  vault_search.py  vault_stats.py
skills/parsidion/templates/: config.yaml  knowledge.md  pattern.md  tool.md
tests/: test_ai_backend.py  test_embed_eval.py  test_hook_integration.py  test_install.py  test_pre_compact_hook.py  test_session_start_hook.py  test_session_stop_hook.py  test_summarize_sessions.py  test_update_index.py  test_vault_common.py  test_vault_dirs_sync.py  test_vault_doctor.py
visualizer/: .gitignore  CLAUDE.md  eslint.config.mjs  package.json  server.ts  tsconfig.server.json
visualizer/app/: globals.css  layout.tsx  page.tsx
visualizer/app/api/files/: route.ts
visualizer/app/api/graph/rebuild/: route.ts
visualizer/app/api/note/: route.ts
visualizer/app/api/note/diff/: route.ts
visualizer/app/api/note/history/: route.ts
visualizer/app/api/vaults/: route.ts
visualizer/components/: CommitList.tsx  DiffViewer.tsx  FileExplorer.tsx  FrontmatterEditor.tsx  GraphCanvas.tsx  HUDPanel.tsx  HistoryView.tsx  NewNoteDialog.tsx  NotePanel.tsx  ReadingPane.tsx  SearchBox.tsx  TabBar.tsx  TemperatureBar.tsx  Toolbar.tsx  UnifiedSearch.tsx  VaultSelector.tsx
visualizer/docs/superpowers/plans/: 2026-03-24-websocket-realtime-file-view.md
visualizer/docs/superpowers/specs/: 2026-03-24-websocket-realtime-file-view-design.md
visualizer/lib/: graph.ts  parseDiff.test.ts  parseDiff.ts  sigma-colors.ts  useLocalStorage.ts  useVaultFiles.ts  useVisualizerState.ts  vaultBroadcast.server.ts  vaultResolver.ts
visualizer/public/: graph.json
