[project]
name = "parsidion-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "parsidion-cc[search]",
]

[tool.uv]
constraint-dependencies = [
    # requests 2.32.x has an insecure temp-file reuse vulnerability (CVE-2024-47081); fixed in 2.33.0
    "requests>=2.33.0",
]

[tool.uv.sources]
parsidion-cc = { path = "../", editable = true }

[project.scripts]
parsidion-mcp = "parsidion_mcp.server:main"

# ARC-017: Dev dependency versions aligned with root pyproject.toml
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "pyright>=1.1.408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
timeout = 10

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "BLE", "UP"]
ignore = ["E501", "B008", "B904"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
