[project]
name = "parsidion-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.4",
    "parsidion[search]",
]

[tool.uv]
constraint-dependencies = [
    # requests 2.32.x has an insecure temp-file reuse vulnerability (CVE-2024-47081); fixed in 2.33.0
    "requests>=2.33.1",
    # GHSA-mj87-hwqh-73pj / CVE-2026-40347
    "python-multipart>=0.0.26",
    # GHSA-whj4-6x5x-4v2j / CVE-2026-40192
    "pillow>=12.2.0",
]

[tool.uv.sources]
parsidion = { path = "../", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
parsidion-mcp = "parsidion_mcp.server:main"

# ARC-017: Dev dependency versions aligned with root pyproject.toml
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "pyright>=1.1.409",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
timeout = 10

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "BLE", "UP"]
ignore = ["E501", "B008", "B904"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
